--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.5.2
 dj-database-url==1.0.0
 Django==3.2.15
 django-allauth==0.51.0
+django-crispy-forms==1.14.0
+django-htmx==1.12.1
 gunicorn==20.1.0
 oauthlib==3.2.0
 psycopg2==2.9.3
