--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-crispy-forms==1.14.0
 django-htmx==1.12.1
 gunicorn==20.1.0
 oauthlib==3.2.0
+Pillow==9.2.0
 psycopg2==2.9.3
 PyJWT==2.4.0
 python3-openid==3.2.0
