--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-countries==7.2.1
 django-crispy-forms==1.14.0
 django-htmx==1.12.1
 gunicorn==20.1.0
+mailchimp-marketing==3.0.75
 oauthlib==3.2.0
 Pillow==9.2.0
 psycopg2==2.9.3
