--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Django==3.2.15
 django-allauth==0.51.0
 django-countries==7.2.1
 django-crispy-forms==1.14.0
+django-extensions==3.2.0
 django-htmx==1.12.1
 gunicorn==20.1.0
 mailchimp-marketing==3.0.75
